--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -379,7 +379,7 @@ platform_definition:
         tagPrefix:
     - name: Spring Social
       groupId: org.springframework.social
-      version: 1.1.4.RELEASE
+      version: 2.0.0.M1
       build:
         repository: https://github.com/spring-projects/spring-social
       modules:
@@ -389,7 +389,7 @@ platform_definition:
         - spring-social-web
     - name: Spring Social Facebook
       groupId: org.springframework.social
-      version: 2.0.3.RELEASE
+      version: 3.0.0.M1
       build:
         repository: https://github.com/spring-projects/spring-social-facebook
       modules:
@@ -397,12 +397,12 @@ platform_definition:
         - spring-social-facebook-web
     - name: Spring Social LinkedIn
       groupId: org.springframework.social
-      version: 1.0.2.RELEASE
+      version: 2.0.0.M1
       modules:
         - spring-social-linkedin
     - name: Spring Social Twitter
       groupId: org.springframework.social
-      version: 1.1.2.RELEASE
+      version: 2.0.0.M1
       build:
         repository: https://github.com/spring-projects/spring-social-twitter
       modules:
