--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -152,7 +152,7 @@
 		<rabbit-amqp-client.version>4.0.0</rabbit-amqp-client.version>
 		<rabbit-http-client.version>1.0.0.RELEASE</rabbit-http-client.version>
 		<reactive-streams.version>1.0.0</reactive-streams.version>
-		<reactor-netty.version>0.5.1.RELEASE</reactor-netty.version>
+		<reactor-netty.version>0.6.0.BUILD-SNAPSHOT</reactor-netty.version>
 		<rest-assured.version>2.9.0</rest-assured.version>
 		<rometools.version>1.6.1</rometools.version>
 		<rxjava.version>1.2.1</rxjava.version>
