Align with latest Spring Boot 2.0 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -156,6 +156,11 @@ platform_definition:
       version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
+    - name: Spring Data LDAP
+      groupId: org.springframework.data
+      version: 2.0.0.BUILD-SNAPSHOT
+      modules:
+        - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
       version: 2.0.0.BUILD-SNAPSHOT
