--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.0.3.RELEASE
+      version: 3.0.4.RELEASE
       modules:
         - reactor-core
       build:
@@ -337,7 +337,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.0.RELEASE
+      version: 4.2.1.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -370,7 +370,7 @@ platform_definition:
         - spring-security-oauth2
     - name: Spring Session
       groupId: org.springframework.session
-      version: 1.3.0.RC1
+      version: 1.3.0.RELEASE
       modules:
         - spring-session
         - spring-session-data-gemfire
@@ -576,6 +576,7 @@ platform_definition:
       - 'org.codehaus.groovy:groovy-swing'
       - 'org.codehaus.groovy:groovy-test'
       - 'org.codehaus.groovy:groovy-testng'
+      - 'org.codehaus.jackson:jackson-core-asl'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jdt.core.compiler:ecj'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
