Align with latest Spring Boot 1.5 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -90,6 +90,7 @@ platform_definition:
         - spring-boot-starter-data-elasticsearch
         - spring-boot-starter-data-gemfire
         - spring-boot-starter-data-jpa
+        - spring-boot-starter-data-ldap
         - spring-boot-starter-data-mongodb
         - spring-boot-starter-data-neo4j
         - spring-boot-starter-data-redis
@@ -138,43 +139,43 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.0.BUILD-SNAPSHOT
+      version: 1.5.0.RC1
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.0.BUILD-SNAPSHOT
+      version: 1.13.0.RC1
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.0.BUILD-SNAPSHOT
+      version: 2.2.0.RC1
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.0.BUILD-SNAPSHOT
+      version: 2.1.0.RC1
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.0.BUILD-SNAPSHOT
+      version: 1.1.0.RC1
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.0.BUILD-SNAPSHOT
+      version: 1.9.0.RC1
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.0.BUILD-SNAPSHOT
+      version: 1.11.0.RC1
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.0.BUILD-SNAPSHOT
+      version: 1.2.0.RC1
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
@@ -184,7 +185,7 @@ platform_definition:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.0.BUILD-SNAPSHOT
+      version: 1.10.0.RC1
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -192,24 +193,24 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.0.BUILD-SNAPSHOT
+      version: 4.2.0.RC1
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.0.BUILD-SNAPSHOT
+      version: 1.8.0.RC1
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.0.BUILD-SNAPSHOT
+      version: 2.6.0.RC1
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.0.BUILD-SNAPSHOT
+      version: 2.1.0.RC1
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -495,6 +496,7 @@ platform_definition:
       - 'org.springframework.boot:spring-boot-starter-parent' # Used by the Platform as its parent
       - 'org.springframework.boot:spring-boot-maven-plugin' # The plugin doesn't expose it dependencies to applications
       - 'org.springframework.boot:spring-boot-configuration-processor' # Used by the Boot build to generate metadata about @ConfigurationProperties
+      - 'org.springframework.boot:spring-boot-configuration-metadata' # Used by the Boot build to generate metadata about @ConfigurationProperties
   unused_dependencies:
     ignored:
       # For user convenience, Boot and the Platform provide extra dependency management for modules
