--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -477,11 +477,9 @@ platform_definition:
       - 'com.datastax.cassandra:cassandra-driver-mapping'
       - 'com.fasterxml:classmate'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
-      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-properties'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-protobuf'
-      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-smile'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-guava'
       - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate3'
@@ -527,6 +525,7 @@ platform_definition:
       - 'io.javaslang:javaslang-match'
       - 'io.projectreactor.addons:reactor-logback'
       - 'io.projectreactor.addons:reactor-adapter'
+      - 'io.projectreactor.ipc:reactor-ipc'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'net.bytebuddy:byte-buddy'
