--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -415,14 +415,12 @@ platform_definition:
         - spring-social-twitter
     - name: Spring Web Flow
       groupId: org.springframework.webflow
-      version: 2.4.4.RELEASE
+      version: 2.5.0.BUILD-SNAPSHOT
       build:
         repository: https://github.com/spring-projects/spring-webflow
       modules:
         - spring-binding
         - spring-faces
-        - spring-js
-        - spring-js-resources
         - spring-webflow
     - name: Spring Web Services
       groupId: org.springframework.ws
