--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -418,6 +418,7 @@ platform_definition:
       groupId: org.springframework.webflow
       version: 2.5.0.BUILD-SNAPSHOT
       build:
+        checkout: 2.5.x
         repository: https://github.com/spring-projects/spring-webflow
       modules:
         - spring-binding
