--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -127,6 +127,8 @@
 		<lettuce.version>3.5.0.Final</lettuce.version>
 		<log4j.version>1.2.17</log4j.version>
 		<myfaces.version>2.2.11</myfaces.version>
+		<nimbus-jose-jwt.version>4.34.1</nimbus-jose-jwt.version>
+		<oauth2-oidc-sdk.version>5.21</oauth2-oidc-sdk.version>
 		<okhttp.version>2.7.5</okhttp.version>
 		<okhttp3.version>3.6.0</okhttp3.version>
 		<openjpa.version>2.4.2</openjpa.version>
@@ -329,6 +331,16 @@
 				<groupId>com.mchange</groupId>
 				<artifactId>c3p0</artifactId>
 				<version>${c3p0.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.nimbusds</groupId>
+				<artifactId>oauth2-oidc-sdk</artifactId>
+				<version>${oauth2-oidc-sdk.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.nimbusds</groupId>
+				<artifactId>nimbus-jose-jwt</artifactId>
+				<version>${nimbus-jose-jwt.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.rabbitmq</groupId>
