--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -61,7 +61,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.4.4.RELEASE
+      version: 1.4.5.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
