--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -316,7 +316,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 1.1.2.BUILD-SNAPSHOT
+      version: 1.1.2.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
