Start building against Spring Integration Kafka 3.0.0 snapshots
See gh-458

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -271,7 +271,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Kafka
       groupId: org.springframework.integration
-      version: 2.1.0.RELEASE
+      version: 3.0.0.BUILD-SNAPSHOT
       modules:
         - spring-integration-kafka
     - name: Spring Integration Splunk
