--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -285,7 +285,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 1.1.2.RELEASE
+      version: 2.0.0.BUILD-SNAPSHOT
       modules:
         - spring-kafka
         - spring-kafka-test
