Revert "Don't include local Maven cache when checking Gradle resolution"
This reverts commit d29d91a11f5412161782cab8b0dfaea8f8afdd76.

--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -16,6 +16,7 @@ dependencyManagement {
 }
 
 repositories {
+	mavenLocal()
 	maven { url 'http://repo.spring.io/libs-snapshot' }
 	maven { url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts' }
 	maven { url 'http://m2.neo4j.org/content/repositories/snapshots' }
