--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -45,7 +45,7 @@
 	</developers>
 
 	<properties>
-		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
+		<spring-integration-flow.version>2.0.0.BUILD-SNAPSHOT</spring-integration-flow.version>
 		<spring-integration-kafka.version>3.0.0.BUILD-SNAPSHOT</spring-integration-kafka.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
 		<spring-web-flow.version>2.5.0.BUILD-SNAPSHOT</spring-web-flow.version>
