--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -338,7 +338,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 4.2.1.RELEASE
+      version: 4.2.2.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
