--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -125,7 +125,7 @@
 		<kryo.version>3.0.3</kryo.version>
 		<ldapbp.version>1.0</ldapbp.version>
 		<ldapsdk.version>4.1</ldapsdk.version>
-		<lettuce.version>3.5.0.Final</lettuce.version>
+		<lettuce.version>5.0.0.Beta1</lettuce.version>
 		<log4j.version>1.2.17</log4j.version>
 		<myfaces.version>2.2.11</myfaces.version>
 		<nimbus-jose-jwt.version>4.34.1</nimbus-jose-jwt.version>
