--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -72,6 +72,7 @@ platform_definition:
         - spring-boot-starter-data-jpa
         - spring-boot-starter-data-ldap
         - spring-boot-starter-data-mongodb
+        - spring-boot-starter-data-mongodb-reactive
         - spring-boot-starter-data-neo4j
         - spring-boot-starter-data-redis
         - spring-boot-starter-data-rest
