--- a/platform-tests/pom.xml
+++ b/platform-tests/pom.xml
@@ -12,10 +12,10 @@
 	<artifactId>platform-tests</artifactId>
 	<name>Spring IO Platform integration tests</name>
 	<description>Performs sanity testing of the Platform</description>
-	<url>http://platform.spring.io/platform/</url>
+	<url>https://platform.spring.io/platform/</url>
 	<organization>
 		<name>Pivotal Software, Inc.</name>
-		<url>http://www.spring.io</url>
+		<url>https://spring.io</url>
 	</organization>
 
 	<properties>
