--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -11,10 +11,10 @@
 	<artifactId>platform</artifactId>
 	<name>Spring IO Platform documentation</name>
 	<description>Spring IO Platform documentation</description>
-	<url>http://platform.spring.io/platform/</url>
+	<url>https://platform.spring.io/platform/</url>
 	<organization>
 		<name>Pivotal Software, Inc.</name>
-		<url>http://www.spring.io</url>
+		<url>https://spring.io</url>
 	</organization>
 	<licenses>
 		<license>
@@ -32,7 +32,7 @@
 			<name>Andy Wilkinson</name>
 			<email>awilkinson at pivotal.io</email>
 			<organization>Pivotal Software, Inc.</organization>
-			<organizationUrl>http://www.spring.io</organizationUrl>
+			<organizationUrl>https://spring.io</organizationUrl>
 			<roles>
 				<role>Project lead</role>
 			</roles>
