--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>platform</artifactId>
 	<name>Spring IO Platform documentation</name>
 	<description>Spring IO Platform documentation</description>
-	<url>http://platform.spring.io/platform/</url>
+	<url>https://platform.spring.io/platform/</url>
 	<organization>
 		<name>Pivotal Software, Inc.</name>
 		<url>https://spring.io</url>
