--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -368,7 +368,7 @@ platform_definition:
        - spring-security-jwt
     - name: Spring Security OAuth
       groupId: org.springframework.security.oauth
-      version: 2.0.12.RELEASE
+      version: 2.0.13.BUILD-SNAPSHOT
       modules:
         - spring-security-oauth
         - spring-security-oauth2
