--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -20,6 +20,7 @@ repositories {
 	maven { url 'http://repo.spring.io/libs-snapshot' }
 	maven { url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts' }
 	maven { url 'http://m2.neo4j.org/content/repositories/snapshots' }
+	maven { url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1' }
 	mavenCentral()
 }
 
