--- a/platform-tests/src/test/resources/pom-footer.template
+++ b/platform-tests/src/test/resources/pom-footer.template
@@ -20,6 +20,11 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>kotlin-eap</id>
+			<name>Kotlin EAP</name>
+			<url>http://dl.bintray.com/kotlin/kotlin-eap-1.1</url>
+		</repository>
 	</repositories>
 
 </project>
