--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -212,7 +212,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.3.6.RELEASE
+      version: 4.3.7.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
